align bugs fixed

--- a/src/app/components/review/review.component.scss
+++ b/src/app/components/review/review.component.scss
@@ -3,12 +3,13 @@
 .container {
     border-bottom: 1px solid rgba($color: $main, $alpha: 0.25);
     padding: 20px 0;
+    width: 100%;
 
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     gap: 20px;
-    align-self: center;
+    align-self: flex-start;
 
     .user {
         cursor: pointer;
@@ -49,6 +50,7 @@
     .container {
         width: 80%;
         flex-direction: row;
+        align-self: center;
     
         .user {
             width: 150px;
